<resources>
    <string name="app_name">Seduh Kopi</string>
    <string name="logo">Logo Seduh Kopi</string>
    <string name="gambar_komik">Ini Komik</string>
    <string name="desc">Sehat Mental Edukasi melalui Komik Psikologi</string>
    <string name="prelude_1">Halo!\nSelamat datang di Seduh Kopi!</string>
    <string name="prelude_2">Sebelum masuk ke MENU, sekarang coba pikirkan sejenak, satu hal yang membuat kamu BAHAGIA</string>
    <string name="prelude_3">Jika sudah, silakan klik "Selesai" untuk lanjut ke halaman berikutnya ya</string>
    <string name="prelude_4">Dengan kita memikirkan hal yang membuat kita bahagia, itu bisa memunculkan emosi-emosi positif dalam diri kita, dan bisa membawa kita pada kebahagiaan yang baru</string>
    <string name="about_title">TIM PENELITI</string>
    <string name="about_button">TENTANG KAMI</string>
    <string name="about_1">Kreator:\nAnggi Mayangsari, S.Psi.\nMahasiswa Magister Profesi Psikologi Klinis Dewasa\nUniversitas Padjadjaran\n(IG: <a href="https://www.instagram.com/anggimayangs_">@anggimayangs_</a>)</string>
    <string name="about_2">Supervisor:\nAulia Iskandarsyah, M.Psi., M.Sc., PhD\nZainal Abidin, M.Si</string>
    <string name="about_3">Ilustrator:\nAzam Fikry\n(IG: <a href="https://www.instagram.com/azamfikry">@azamfikry</a>)</string>
    <string name="about_4">Programmer:\nFatan A. Ahdiy\n(<a href="https://www.linkedin.com/in/fatanahdiy97">Kunjungi LinkedIn</a>)</string>
    <string name="about_5">Musik:\nThe Red Light Special oleh Matt Large <a href="https://www.epidemicsound.com/track/Qzo9exfFaS/">@Epidemic Sound</a></string>
    <string name="opt_ya">YA</string>
    <string name="opt_tidak">TIDAK</string>
    <string name="opt_ok">OK</string>
    <string name="opt_on">MUSIK : ON</string>
    <string name="opt_off">MUSIK : OFF</string>
    <string name="menu">MENU</string>
    <string name="menu_item_1">KOMIK</string>
    <string name="menu_item_2">DETEKSI YUK!</string>
    <string name="menu_item_3">CARI BANTUAN</string>
    <string name="comic_nav_1">Episode 1</string>
    <string name="comic_nav_2">Episode 2</string>
    <string name="comic_nav_3">Episode 3</string>
    <string name="comic_title_1">Episode 1\n\"Takut Ketemu Orang\"</string>
    <string name="comic_title_2">Episode 2\n\"Nangis Tiap Hari\"</string>
    <string name="comic_title_3">Episode 3\n\"Hopeless\"</string>
    <string name="comic_address_1">file:///android_asset/episode_1_rev.png</string>
    <string name="comic_address_2">file:///android_asset/episode_2_rev.png</string>
    <string name="comic_address_3">file:///android_asset/episode_3_rev.png</string>
    <string name="comic_questions_1">Eits! Kalau mau baca episode 2, ikuti kuis ini dulu yuk? Caranya tinggal klik pernyataan yang SALAH di bawah ini ya.</string>
    <string name="comic_questions_2">Eits! Kalau mau baca episode 3, ikuti kuis ini dulu yuk? Caranya tinggal klik pernyataan yang SALAH di bawah ini ya</string>
    <string name="comic_answers_1_1">Salah satu ciri mental yang sehat itu adalah dapat bekerja secara produktif</string>
    <string name="comic_answers_1_2">Kita boleh melakukan self-diganosis</string>
    <string name="comic_answers_1_3">Ketika kita cemas, belum tentu kita mengalami gangguan mental</string>
    <string name="comic_answers_2_1">Kita bisa melakukan relaksasi untuk menurunkan ketegangan fisik maupun mental</string>
    <string name="comic_answers_2_2">Tenaga professional kesehatan mental dapat ditemui di biro psikologi dan beberapa rumah sakit serta puskesmas</string>
    <string name="comic_answers_2_3">Lingkungan sosial tidak berpengaruh terhadap kondisi psikologis seseorang</string>
    <string name="comic_wrong_ans">Coba lagi ya.. Semangat!</string>
    <string name="comic_right_ans">BENAR!</string>
    <string name="contact_item_1">Nama Klinik</string>
    <string name="contact_item_2">Silakan KLIK nama klinik untuk membuka lokasi pada Google Maps</string>
    <string name="contact_item_3">Alamat</string>
    <string name="contact_item_4">Telepon</string>
    <string name="detection_script_1">Halo! Ini adalah kuisioner untuk mendeteksi kesehatan mental kamu. Bacalah petunjuknya terlebih dahulu sebelum mengisi ya</string>
    <string name="detection_script_2">Berikut ini adalah pertanyaan-pertanyaan yang berhubungan dengan kondisi sakit dan permasalahan tertentu yang mungkin mengganggu kamu selama 30 hari belakangan ini. Jika pertanyaan tersebut sesuai dengan kondisimu, dan kamu telah mengalaminya semenjak kurang lebih 30 hari belakangan ini, maka klik “YA”.\n\nNamun, jika pertanyaan tersebut tidak sesuai dengan kondisimu, dan kamu tidak mengalaminya semenjak kurang lebih 30 hari belakangan ini, maka klik “TIDAK”.\n\nPada saat menjawab pertanyaan, dimohon untuk tidak mendiskusikan pertanyaan tersebut dengan siapapun. Jika kamu merasa tidak yakin untuk menjawab pada salah satu pertanyaan, silakan tetap memberikan jawaban sebaik yang kamu bisa.\n\nSemua jawabanmu akan dijamin kerahasiaannya.</string>
    <string name="detection_script_3">Pertanyaan</string>
    <string name="detection_questions_1">Apakah kamu sering sakit kepala?</string>
    <string name="detection_questions_2">Apakah nafsu makan kamu menurun?</string>
    <string name="detection_questions_3">Apakah kamu tidak bisa tidur nyenyak?</string>
    <string name="detection_questions_4">Apakah kamu mudah merasa takut?</string>
    <string name="detection_questions_5">Apakah tangan kamu gemetar?</string>
    <string name="detection_questions_6">Apakah kamu merasa cemas, tegang, atau khawatir?</string>
    <string name="detection_questions_7">Apakah pencernaan kamu buruk?</string>
    <string name="detection_questions_8">Apakah kamu mengalami kesulitan untuk berpikir jernih?</string>
    <string name="detection_questions_9">Apakah kamu merasa tidak bahagia?</string>
    <string name="detection_questions_10">Apakah kamu lebih sering menangis dari biasanya?</string>
    <string name="detection_questions_11">Apakah kamu sulit menikmati kegiatan sehari‐hari?</string>
    <string name="detection_questions_12">Apakah kamu merasa kesulitan untuk mengambil keputusan?</string>
    <string name="detection_questions_13">Apakah hasil kerja sehari‐hari kamu memburuk?</string>
    <string name="detection_questions_14">Apakah kamu merasa tidak bisa melakukan hal yang bermanfaat dalam hidup?</string>
    <string name="detection_questions_15">Apakah kamu kehilangan minat untuk melakukan berbagai macam hal?</string>
    <string name="detection_questions_16">Apakah kamu merasa sebagai orang yang tidak berharga?</string>
    <string name="detection_questions_17">Apakah kamu memiliki pemikiran untuk mengakhiri hidup?</string>
    <string name="detection_questions_18">Apakah kamu merasa lelah sepanjang waktu?</string>
    <string name="detection_questions_19">Apakah kamu merasakan perasaaan tidak nyaman di perut?</string>
    <string name="detection_questions_20">Apakah kamu mudah merasa lelah?</string>
    <string name="detection_questions_21">Apakah kamu merasa ada seseorang yang ingin membahayakan diri kamu?</string>
    <string name="detection_questions_22">Apakah kamu merasa diri lebih penting dari penilaian sebagian besar orang lain?</string>
    <string name="detection_questions_23">Apakah kamu menyadari ada gangguan atau ada yang aneh dari cara berpikir kamu?</string>
    <string name="detection_questions_24">Apakah kamu pernah mendengar suara tanpa mengetahui darimana asalnya atau suara yang tidak bisa didengar orang lain?</string>
    <string name="detection_item_1">PETUNJUK PENGISIAN</string>
    <string name="detection_item_2">MULAI</string>
    <string name="detection_item_3">SELESAI</string>
    <string name="detection_item_4">Kamu bisa klik “Mencari Bantuan” untuk memperoleh kontak layanan psikologi yang ada di daerah Bandung dan sekitarnya. Semangat!</string>
    <string name="detection_item_5">KETERANGAN</string>
    <string name="detection_item_6">Total skor yang kamu miliki menunjukkan bahwa masalah psikologis yang kamu rasakan dalam kehidupan sehari-hari tergolong rendah. Kondisi kesehatan mental kamu tergolong baik, sehingga kamu harus mempertahankan kondisi ini untuk tetap sehat.</string>
    <string name="detection_item_7">Total skor yang kamu miliki menunjukkan bahwa masalah psikologis yang kamu rasakan dalam kehidupan sehari-hari tergolong cukup tinggi. Kondisi ini menunjukkan adanya kondisi kesehatan mental yang tidak optimal. Kamu disarankan untuk bisa mengelola kondisi psikologis yang lebih efektif dan jika diperlukan kamu bisa mencari bantuan tenaga profesional.</string>
</resources>