<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/colorCoffee1">

        <TextView
            android:id="@+id/title_deteksi"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_margin="30dp"
            android:textAlignment="center"
            android:textColor="@color/colorCoffee3"
            android:textSize="50sp"
            android:fontFamily="@font/casualvacancy_regular"
            android:textStyle="bold"
            android:text="@string/menu_item_2"
            app:layout_constraintBottom_toTopOf="@id/intro_deteksi"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_weight="1" />

        <TextView
            android:id="@+id/intro_deteksi"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/detection_script_1"
            android:gravity="center"
            android:textSize="21sp"
            android:textColor="@color/colorCoffee5"
            android:fontFamily="@font/komiko"
            android:paddingHorizontal="20dp"
            app:layout_constraintBottom_toTopOf="@id/petunjuk_deteksi_1"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/title_deteksi"
            app:layout_constraintVertical_weight="1"/>

        <TextView
            android:id="@+id/petunjuk_deteksi_1"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:text="@string/detection_item_1"
            android:gravity="center"
            android:textSize="24sp"
            android:textStyle="bold"
            android:textColor="@color/colorCoffee5"
            android:fontFamily="@font/komiko"
            android:layout_marginVertical="10dp"
            android:paddingHorizontal="50dp"
            app:layout_constraintBottom_toTopOf="@id/petunjuk_deteksi_2"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/intro_deteksi"
            app:layout_constraintVertical_weight=".5"/>

        <TextView
            android:id="@+id/petunjuk_deteksi_2"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:background="@color/colorCoffee2"
            android:text="@string/detection_script_2"
            android:gravity="center"
            android:textSize="21sp"
            android:textColor="@color/colorCoffee1"
            android:fontFamily="@font/komiko"
            android:paddingHorizontal="50dp"
            android:paddingVertical="20dp"
            android:scrollbars="vertical"
            app:layout_constraintBottom_toTopOf="@id/group_nav"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/petunjuk_deteksi_1"
            app:layout_constraintVertical_weight="4"/>

        <Button
            android:id="@+id/button_mulai"
            android:layout_width="150dp"
            android:layout_height="50dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="10dp"
            android:background="@drawable/button_coffee"
            android:fontFamily="@font/casualvacancy_regular"
            android:text="@string/detection_item_2"
            android:textAlignment="center"
            android:textColor="@color/colorCoffee1"
            android:textSize="24sp"
            android:textStyle="bold"
            app:layout_constraintTop_toTopOf="@id/group_nav"
            app:layout_constraintBottom_toBottomOf="@id/group_nav"
            app:layout_constraintStart_toEndOf="@id/button_menu"
            app:layout_constraintEnd_toEndOf="@id/group_nav" />

        <Button
            android:id="@+id/button_menu"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:layout_marginVertical="20dp"
            android:background="@drawable/seekpng_com_coffee_steam_png_944036"
            android:text="@string/menu"
            android:textSize="12sp"
            android:textColor="@color/colorCoffee1"
            android:gravity="center"
            app:layout_constraintTop_toTopOf="@id/group_nav"
            app:layout_constraintBottom_toBottomOf="@id/group_nav"
            app:layout_constraintStart_toStartOf="@id/group_nav"
            app:layout_constraintEnd_toStartOf="@id/button_mulai"/>

        <androidx.constraintlayout.widget.Group
            android:id="@+id/group_nav"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            app:layout_constraintTop_toBottomOf="@id/petunjuk_deteksi_2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintVertical_weight="2"/>

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>