<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:background="@color/colorCoffee2">

        <View
            android:id="@+id/header1"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="20dp"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintBottom_toTopOf="@id/header2"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintVertical_chainStyle="spread"
            app:layout_constraintVertical_weight="1" />

        <ImageView
            android:id="@+id/logo_unpad"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:src="@drawable/logo_unpad1"
            app:layout_constraintBottom_toBottomOf="@id/header1"
            app:layout_constraintTop_toTopOf="@id/header1"
            app:layout_constraintStart_toStartOf="@id/header1"
            app:layout_constraintEnd_toStartOf="@id/logo_seduhKopi"
            app:layout_constraintHorizontal_weight="1"
            android:contentDescription="@string/about_title" />

        <ImageView
            android:id="@+id/logo_seduhKopi"
            android:layout_width="0dp"
            android:layout_height="0dp"
            android:src="@drawable/logo_seduh_kopi"
            app:layout_constraintBottom_toBottomOf="@id/header1"
            app:layout_constraintTop_toTopOf="@id/header1"
            app:layout_constraintStart_toEndOf="@id/logo_unpad"
            app:layout_constraintEnd_toEndOf="@id/header1"
            app:layout_constraintHorizontal_weight="1"
            android:contentDescription="@string/about_title" />

        <View
            android:id="@+id/header2"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginHorizontal="20dp"
            app:layout_constraintTop_toBottomOf="@id/header1"
            app:layout_constraintBottom_toTopOf="@id/isian"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintVertical_weight="1"/>

        <TextView
            android:id="@+id/title"
            android:text="@string/about_title"
            android:textColor="@color/colorCoffee1"
            android:fontFamily="@font/casualvacancy_regular"
            android:gravity="center"
            android:textSize="50sp"
            android:textStyle="bold"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="30dp"
            app:layout_constraintHorizontal_weight="2"
            app:layout_constraintTop_toTopOf="@id/header2"
            app:layout_constraintBottom_toBottomOf="@id/header2"
            app:layout_constraintStart_toStartOf="@id/header2"
            app:layout_constraintEnd_toEndOf="@id/header2"/>

        <View
            android:id="@+id/isian"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginBottom="20dp"
            app:layout_constraintTop_toBottomOf="@id/header2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintVertical_weight="4"/>

        <TextView
            android:id="@+id/text_about_1"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:text="@string/about_1"
            android:textColor="@color/colorCoffee1"
            android:fontFamily="@font/komiko"
            android:gravity="center"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/text_about_2"
            app:layout_constraintEnd_toEndOf="@id/isian"
            app:layout_constraintStart_toStartOf="@id/isian"
            app:layout_constraintTop_toTopOf="@id/isian"
            app:layout_constraintVertical_chainStyle="spread" />

        <TextView
            android:id="@+id/text_about_2"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:text="@string/about_2"
            android:textColor="@color/colorCoffee1"
            android:fontFamily="@font/komiko"
            android:gravity="center"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/text_about_3"
            app:layout_constraintEnd_toEndOf="@id/isian"
            app:layout_constraintStart_toStartOf="@id/isian"
            app:layout_constraintTop_toBottomOf="@id/text_about_1" />

        <TextView
            android:id="@+id/text_about_3"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:text="@string/about_3"
            android:textColor="@color/colorCoffee1"
            android:fontFamily="@font/komiko"
            android:gravity="center"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/text_about_4"
            app:layout_constraintEnd_toEndOf="@id/isian"
            app:layout_constraintStart_toStartOf="@id/isian"
            app:layout_constraintTop_toBottomOf="@id/text_about_2" />

        <TextView
            android:id="@+id/text_about_4"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:text="@string/about_4"
            android:textColor="@color/colorCoffee1"
            android:fontFamily="@font/komiko"
            android:gravity="center"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/text_about_5"
            app:layout_constraintEnd_toEndOf="@id/isian"
            app:layout_constraintStart_toStartOf="@id/isian"
            app:layout_constraintTop_toBottomOf="@id/text_about_3" />

        <TextView
            android:id="@+id/text_about_5"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:text="@string/about_5"
            android:textColor="@color/colorCoffee1"
            android:fontFamily="@font/komiko"
            android:gravity="center"
            android:textSize="18sp"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@id/button_ok"
            app:layout_constraintEnd_toEndOf="@id/isian"
            app:layout_constraintStart_toStartOf="@id/isian"
            app:layout_constraintTop_toBottomOf="@id/text_about_4" />

        <Button
            android:id="@+id/button_ok"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginVertical="10dp"
            android:backgroundTint="@color/colorCoffee1"
            android:text="@string/opt_ok"
            app:layout_constraintTop_toBottomOf="@id/text_about_5"
            app:layout_constraintBottom_toBottomOf="@id/isian"
            app:layout_constraintStart_toStartOf="@id/isian"
            app:layout_constraintEnd_toEndOf="@id/isian" />

    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>